<resources>
    <string name="app_name">Travel Trips</string>
    <string name="button.finish">FINISH</string>
    <string name="button.next">NEXT</string>
    <string name="button.skip">SKIP</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_your_email">Your Email Address</string>
    <string name="prompt_password">Enter Password</string>
    <string name="prompt_your_password">Set Password</string>
    <string name="prompt_full_name">Full Name</string>
    <string name="prompt_mobile_number">Mobile Number</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Create Account</string>
    <string name="action_sign_in_google">Google</string>
    <string name="action_sign_in_facebook">Facebook</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_reset">Reset</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_phone">Mobile number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="email_field_required">You need to enter a email</string>
    <string name="password_field_required">You need to enter a password</string>
    <string name="fullname_field_required">Name cannot be blank</string>
    <string name="phone_field_required">Phone cannot be blank</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_forget_password">Forget Password</string>
    <string name="title_activity_sign_up_login">HAVE AN ACCOUNT?</string>
    <string name="title_terms_conditions_checkbox">I have read and accept</string>
    <string name="title_terms_conditions"> Terms and Conditions</string>
    <string name="title_activity_sign">Sign up</string>
    <string name="description_activity_forget_password">Enter your email and we will send a link to recover your accout.</string>
    <string name="title_activity_terms_conditions">Terms Conditions</string>

    <string name="auth_failed">Login auth failed</string>
    <string name="facebook_app_id">351837651951877</string>
    <string name="fb_login_protocol_scheme">fb351837651951877</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
