<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.technoblaze.traveltrips.traveltrips.ForgetPasswordActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_forget_password_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="@string/description_activity_forget_password"
                    android:gravity="left" />

            </TableRow>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/forget_password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                app:errorEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/email_forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id ="@+id/email_password_reset_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/white"
                android:text="@string/action_reset"
                android:background="@drawable/login_button"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>






</android.support.constraint.ConstraintLayout>
